Adaptation of style to make sure also long file names don't overlap things

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -526,4 +526,11 @@ button[active=active] {
   color: black;
   text-align: center;
   opacity: 1;
+  text-overflow: ellipsis;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.filepond--drop-label {
+  margin-top: 15px !important;
 }
